# MedicalReportAnalyzer

./: .env  README.md  pyproject.toml  requirements.txt  run_backend.py  start_dev.py
backend/: main.py  models.py
backend/services/: __init__.py  ai_service.py  file_processor.py
backend/utils/: __init__.py  config.py
medical-report-reader/: index.html  package.json
medical-report-reader/src/components/: AnalysisResults.tsx  FileUpload.tsx  Header.tsx
medical-report-reader/src/hooks/: useHealthCheck.ts  useMedicalAnalysis.ts
medical-report-reader/src/lib/: api.ts
medical-report-reader/src/pages/: Index.tsx
